--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.1.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.alura.microservice.config</groupId>
-	<artifactId>config-server</artifactId>
+	<groupId>br.com.alopes.microservice</groupId>
+	<artifactId>ms-config-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>config-server</name>
-	<description>ConfigServer</description>
+	<name>ms-config-server</name>
+	<description>Projeto para exemplificar o uso de uma API de Configuração de Servidor</description>
 
 	<properties>
 		<java.version>1.8</java.version>
