--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,12 @@
-
 server:
   port: 8888
-  
+
 spring:
   cloud:
     config:
       server:
         encrypt:
-            enabled: false
+          enabled: false
         git:
-          uri: https://github.com/anelopes/microservice-repo/
-          search-paths: fornecedor, loja, transportador
+          uri: https://github.com/anelopes/ms-properties/
+          search-paths: provider, store, transporter
